primary-bookinfo/destinationrule-details.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: details
  namespace: primary-bookinfo
spec:
  host: details
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
