primary-bookinfo/destinationrule-ratings.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: ratings
  namespace: primary-bookinfo
spec:
  host: ratings
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v2-mysql
      labels:
        version: v2-mysql
    - name: v2-mysql-vm
      labels:
        version: v2-mysql-vm
