primary-bookinfo/destinationrule-rules.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: reviews
  namespace: primary-bookinfo
spec:
  host: reviews
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
