primary-bookinfo/virtualservice-details.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: details
  namespace: primary-bookinfo
spec:
  hosts:
    - details.primary-bookinfo.svc.cluster.local
  http:
    - route:
        - destination:
            host: details.primary-bookinfo.svc.cluster.local
            subset: v1
          weight: 80
        - destination:
            host: details-v2.secondary-bookinfo.svc.secondary-mesh-imports.local
          weight: 20
status: {}
